<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/navigation_transaction"
        android:enabled="true"
        android:icon="@drawable/ic_transaction_svg"
        android:title="@string/transactions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_accept_payments"
        android:enabled="true"
        android:icon="@drawable/ic_accept_payment_svg"
        android:title="@string/accept_payment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_settlements"
        android:enabled="true"
        android:icon="@drawable/ic_settlement_svg"
        android:title="@string/settlements"
        app:showAsAction="ifRoom" />
</menu>