<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cart_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/new_product" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/txt_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:fontFamily="@font/josefin_sans"
                    android:paddingTop="1dp"
                    android:text="Customer Name"
                    android:textColor="@color/creditCardBackground"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_order_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/josefin_sans"
                        android:text="@string/order_id"
                        android:textColor="#000"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_order_id_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/josefin_sans"
                        android:paddingStart="7dp"
                        android:text="@string/order_id_value"
                        android:textColor="#000"
                        android:textSize="13sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1.4"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_order_payment_method_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/josefin_sans"
                        android:text="@string/order_payment_method_value"
                        android:textColor="#000"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_order_payment_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/josefin_sans"
                        android:paddingStart="7dp"
                        android:text="@string/order_payment_method"
                        android:textColor="#000"
                        android:textSize="13sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1.4"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_order_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/josefin_sans"
                        android:text="@string/order_type"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txt_order_type_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/josefin_sans"
                        android:paddingStart="7dp"
                        android:text="@string/order_type_value"
                        android:textColor="#000"
                        android:textSize="13sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:fontFamily="@font/josefin_sans"
                    android:text="@string/order_date"
                    android:textColor="#000"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/ic_close"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>