<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:text="Verify Contact Number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <com.cabral.emaishamerchantsapp.utils.OtpEdittext
            android:id="@+id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_corners_edittext_light"
            android:drawableStart="@drawable/ic_phone_android"
            android:drawableLeft="@drawable/ic_phone_android"
            android:drawablePadding="10dp"
            android:fontFamily="@font/josefin_sans"
            android:hint="@string/contact_no"
            android:imeOptions="actionSearch"
            android:inputType="phone"
            android:padding="5dp"
            android:tag="@string/ugandan_code"
            android:textColor="@color/textColorSecondaryLight"
            android:textColorHint="@color/textColorPrimaryDark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:background="@drawable/rounded_corners_button_accent"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>